--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -5,38 +5,42 @@
     --gray: #9b9b9b;
 }
 
+/*Card*/
+
 .itemCard {
     text-align: left;
     background-color: var(--white); 
     border-radius: 10px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     display: flex;
-    max-width: 100%;
     margin-top: 4vh;
     overflow: hidden;
-    width: 100%;
-}
 
+
+    min-height: 100px;
+    min-width: 360px;
+}
 .itemCard h6 {
     opacity: 0.6;
     margin: 0;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
-
 .itemCard h2 {
     letter-spacing: 1px;
     margin: 0.5pc 0;
 }
 
+/*Left side*/
+
 .itemName {
     background-color: #2A265F;
     color:var(--white);
-    padding: 5%;
-    max-width: 20vw;
-    min-width: 20vw;
-}
 
+    position: relative;
+    padding: 2vmin;
+    width: 35%;
+}
 .itemName a {
     color:var(--white);
     display: inline-block;
@@ -46,27 +50,29 @@
     text-decoration: none;
 }
 
+/*Right side*/
+
 .itemInfo {
-    padding: 3.5vh;
     position: relative;
-    width: 100%;
+    padding: 2vmin;
+    width: 65%;
 }
+
+/*Progress bar*/
 
 .progressContainer {
     position: absolute;
-    top: 3vh;
+    top: 1vh;
     right: 3vh;
     text-align: right;
     width: 150px;
 }
-
 .progress {
     background-color: #ddd;
     border-radius: 3px;
     height: 5px;
     width: 100%;
 }
-
 .progress::after {
     border-radius: 3px;
     background-color: var(--fill-color);
@@ -77,26 +83,114 @@
     height: 5px;
     width: var(--fill-percent);
 }
-
 .progress-text {
     font-size: 12px;
     opacity: 0.6;
     letter-spacing: 1px;
 }
 
+/*Consume card*/
+
+.consumeCard{
+    text-align: left;
+    background-color: var(--white); 
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    max-width: 100%;
+    overflow: hidden;
+    margin-top: 1vh;
+    width: 100%;
+    padding: 1.5vh;
+    padding-left: 2vh;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+    /*consume card animation*/
+
+    .fade-enter-active {
+        animation: bounce-in 0.4s;
+    }
+    
+    .fade-leave-active {
+        animation: bounce-out 0.2s;
+    }
+      
+    @keyframes bounce-in {
+        0%{
+            transform: translateX(10vw) scale(0.8);
+            opacity: 0;
+        }
+        100%{
+            transform: translateX(0vw) scale(1);
+            opacity: 1;
+        }
+    }
+    @keyframes bounce-out {
+        0%{
+            transform: translateX(0vw) scale(1);
+            opacity: 1;
+        }
+        100%{
+            transform: translateX(-10vw) scale(0.8);
+            opacity: 0;
+        }
+    }
+
+
+/*Buttons*/
+
+.buttonContainer{
+    float: right;
+    margin-left:auto; 
+    margin-right:0;
+
+}
+
 .btn{
     border: 0;
+    margin: 0vh 0.5vw;
     border-radius: 50px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     color: var(--white);
     font-size: 0.8pc;
     padding: 0.5pc 1.5pc;
     letter-spacing: 1px;
-    transition-duration: 0.4s;
-    position: absolute;
+    transition-duration: 0.4s ease-in ease-out;
     bottom: 0.4pc;
     cursor: pointer;
+    display:inline-block;
 }
+.btn:hover{
+    box-shadow: 0 13px 13px rgba(0, 0, 0, 0.4);
+    transform:scale(1.1,1.1);
+}
+.btn:active{
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.4);
+    transform:scale(0.9,0.9);
+}
+
+.red{
+    background-color: #882323;
+}
+.red:hover{
+    background-color: #b42e2e;
+}
+.red:active{
+    background-color: #5f1919;
+}
+.blue{
+    background-color: #2A265F;
+}
+.blue:hover{
+    background-color: #3c368a;
+}
+.blue:active{
+    background-color: #1e1b44;
+}
+
+/*Forms*/
 
 .form__field {
     appearance: none;
@@ -108,10 +202,30 @@
     font-size: 1.3rem;
     background: transparent;
     border-width: 3px;
-    transition: border-color 0.2s;;
+    transition: border-color 0.2s;
+    margin-right: 0.8vw;
+    cursor: pointer;
+}
+.form__field h2{
+    display:inline-block;
 }
 .form__field:focus{ 
     font-weight: 700;
     border-image: linear-gradient(to right, var(--primary),var(--secondary));
     border-image-slice: 1;
+}
+.mediumField{
+    width: 30%
+}
+.smallField{
+    width: 25%;
+}
+.xtrSmallField{
+    width: 15%;
+}
+
+/*Generic*/
+
+.whightText{
+    color:  var(--white);
 }
