--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -16,7 +16,7 @@
     display: flex;
     margin-top: 4vh;
     overflow: hidden;
-
+    z-index: 10;
 
     min-height: 100px;
     min-width: 360px;
