--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -38,17 +38,8 @@
     background-color: #2A265F;
     color:var(--white);
 
-    position: relative;
     padding: 2vmin;
     width: 35%;
-}
-.itemName a {
-    color:var(--white);
-    display: inline-block;
-    font-size: min(max(16px, 4vw), 22px);
-    opacity: 0.6;
-    margin-top: 30px;
-    text-decoration: none;
 }
 
 /*Right side*/
@@ -99,45 +90,10 @@
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     max-width: 100%;
-    overflow: hidden;
     margin-top: 1vh;
-    width: 100%;
     padding: 1.5vh;
     padding-left: 2vh;
-    position: relative;
-    width: 100%;
-    overflow: hidden;
 }
-    /*consume card animation*/
-
-    .fade-enter-active {
-        animation: bounce-in 0.4s;
-    }
-    
-    .fade-leave-active {
-        animation: bounce-out 0.2s;
-    }
-      
-    @keyframes bounce-in {
-        0%{
-            transform: translateX(10vw) scale(0.8);
-            opacity: 0;
-        }
-        100%{
-            transform: translateX(0vw) scale(1);
-            opacity: 1;
-        }
-    }
-    @keyframes bounce-out {
-        0%{
-            transform: translateX(0vw) scale(1);
-            opacity: 1;
-        }
-        100%{
-            transform: translateX(-10vw) scale(0.8);
-            opacity: 0;
-        }
-    }
 
 
 /*Buttons*/
@@ -158,7 +114,6 @@
     font-size: 0.8pc;
     padding: 0.5pc 1.5pc;
     letter-spacing: 1px;
-    transition-duration: 0.4s ease-in ease-out;
     bottom: 0.4pc;
     cursor: pointer;
     display:inline-block;
@@ -169,7 +124,7 @@
 }
 .btn:active{
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.4);
-    transform:scale(0.9,0.9);
+    transform:scale(0.95,0.95);
 }
 
 .red{
@@ -203,7 +158,6 @@
     font-size: 1.3rem;
     background: transparent;
     border-width: 3px;
-    transition: border-color 0.2s;
     margin-right: 0.8vw;
     cursor: pointer;
 }
@@ -230,6 +184,6 @@
 .whightText{
     color:  var(--white);
 }
-.whightText:focus{
+/* .whightText:focus{
     text-shadow: -0.5px 0 var(--white), 0.6px 0 var(--white);
-}
+} */
