--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -1,10 +1,3 @@
-* {
-    --primary: #11998e;
-    --secondary: #38ef7d;
-    --white: #fff;
-    --gray: #9b9b9b;
-    --black: #000;
-}
 
 /*Card*/
 
@@ -100,7 +93,6 @@
 /*Buttons*/
 
 .buttonContainer{
-    float: right;
     margin-left:auto; 
     margin-right:0;
 
@@ -117,7 +109,7 @@
     letter-spacing: 1px;
     bottom: 0.4pc;
     cursor: pointer;
-    display:inline-block;
+    float: right;
 }
 .btn:hover{
     box-shadow: 0 13px 13px rgba(0, 0, 0, 0.4);
@@ -145,6 +137,15 @@
 }
 .blue:active{
     background-color: #1e1b44;
+}
+.grey{
+    background-color: #555555;
+}
+.grey:hover{
+    background-color: #8a8a8a;
+}
+.grey:active{
+    background-color: #363636;
 }
 
 /*Forms*/
