--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -171,14 +171,25 @@
     border-image: linear-gradient(to right, var(--primary),var(--secondary));
     border-image-slice: 1;
 }
+
 .mediumField{
-    width: 30%
+    min-width: 4pc;
+    width: 35%;
+    max-width: 10pc;
+    flex-grow: 2;
 }
 .smallField{
+    min-width: 3pc;
     width: 25%;
+    max-width: 8pc;
+    flex-grow: 1.5;
+
 }
 .xtrSmallField{
+    min-width: 2pc;
     width: 15%;
+    max-width: 6pc;
+    flex-grow: 1;
 }
 
 /*Generic*/
