Finished with recipes

--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -29,7 +29,7 @@
 /*Left side*/
 
 .itemName {
-    background-color: #2A265F;
+    background-color: var(--bg-blue);
     color:var(--white);
 
     padding: 2vmin;
@@ -51,13 +51,14 @@
     top: 1vh;
     right: 3vh;
     text-align: right;
-    width: 150px;
+    width: 120px;
 }
 .progress {
-    background-color: #ddd;
+    background-color: var(--progress-gray);
     border-radius: 3px;
     height: 5px;
     width: 100%;
+    float: right;
 }
 .progress::after {
     border-radius: 3px;
@@ -168,7 +169,7 @@
 }
 .form__field:focus{ 
     text-shadow: -0.5px 0 var(--black), 0.7px 0 var(--black);
-    border-image: linear-gradient(to right, var(--primary),var(--secondary));
+    border-image: linear-gradient(to right, var(--select-primary),var(--select-secondary));
     border-image-slice: 1;
 }
 
