--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,6 +10,7 @@
     
     --ok-green:#0e4444;
     --ok-red: #5f1919;
+    --ok-orange: #9b790b;
 
     --black: #0a0a0a;
     --bg-blue: #2A265F;
