--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,6 +7,8 @@
     --progress-gray: #ddd;
 
     --section-gray: #cfcfcf;
+    --section-dark-gray: #b6b6b6;
+    --section-dark-gray-2: #aaaaaa;
     
     --ok-green:#0e4444;
     --ok-red: #5f1919;
