Redesigned Recipe Ingredients

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,8 +6,8 @@
     --gray: #9b9b9b;
     --progress-gray: #ddd;
 
-    --section-gray: #cfcfcf;
-    --section-dark-gray: #b6b6b6;
+    --section-gray: #c2c2c2;
+    --section-dark-gray: #b1b1b1;
     --section-dark-gray-2: #aaaaaa;
     
     --ok-green:#0e4444;
